<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding= "16dp"
        >
        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/imageJa"
            android:src="@mipmap/ic_launcher"
            />

        <TextView
            android:id="@+id/nameJa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@id/imageJa"
            android:layout_toRightOf="@id/imageJa"
            android:textColor="#000"
            android:textSize="22dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonJa"
            android:layout_width="108dp"
            android:layout_height="50dp"
            android:layout_marginStart="266dp"
            android:layout_marginTop="30dp"
            android:text="DETAILS"
            app:backgroundTint="#e4e278"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>