...
                android:layout_toRightOf="@id/imageIv"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonTv"
                android:layout_width="108dp"
                android:layout_height="40dp"
                android:layout_marginStart="266dp"
                android:layout_marginTop="32dp"
                android:text="DETAILS"
                app:backgroundTint="#e4e278"
...
