...
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.quickcash.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/employerJobPageFragment"
        android:name="com.example.quickcash.ui.employerJobPage.EmployerJobPageFragment"
        android:label="job_page"
        tools:layout="@layout/fragment_employerjobpage"/>
    <fragment
        android:id="@+id/employerJobPageDestFragment"
        android:name="com.example.quickcash.ui.employerJobPage.EmployerJobPageFragment"
...
