...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9bcf9f"
    tools:context=".ui.employeeJobHistory.EmployeeJobHistoryFragment">

    <TextView
        android:id="@+id/upcomingJobHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="100dp"
        android:text="Upcoming Jobs"
...
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upcomingJobHeader" />

    <TextView
        android:id="@+id/previousJobHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="16dp"
        android:text="Previous Jobs"
        android:textSize="30sp"
...
