...

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/myJobHistoryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        app:backgroundTint="#e4e278"
        android:textStyle="bold"
...
